# nigerians-only

./: .gitignore  MANIFEST.in  README.rst  deploy.sh  readme.md  requirements.txt  setup.cfg  setup.py
nigerian_only/: __init__.py  apps.py  decorator.py  enums.py  exceptions.py  middleware.py  urls.py  utils.py  views.py
nigerian_only/templates/nigerian_only/: 403.html
tests/: __init__.py  client.py  conftest.py  run_tests.py  test_decorator.py  test_middleware.py
