[metadata]
name = django-nigerian-only
version = 1.0
description = Django Nigerians Only is a third party Django application that allows developers to restrict access to their Django applications to only Nigerian users.
long_description = file: README.rst
url = https://github.com/Afeez1131/django-nigerian-only
author = Afeez Lawal
author_email = lawalafeez052@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 5.0
    geoip2
