[metadata]
name = django-nigerians-only
version = attr: nigerian_only.__version__
description = Django Nigerians Only is a third application that allows developers to restrict access to their applications to only Nigerian users.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation=https://github.com/Afeez1131/nigerians-only
    Source Code=https://github.com/Afeez1131/nigerians-only
url = https://github.com/Afeez1131/nigerians-only
author = attr: nigerian_only.__author__
author_email = lawalafeez052@gmail.com
license = MIT
classifiers =
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django>=4.1
    geoip2>=4.8.0

[options.packages.find]
exclude =
    tests
    tests.*
    migrations
    migrations.*
